2eme/LPO/jdbc_car/src/main/java/org/example/invalidCarException/CarAlreadyExistException.java
package org.example.invalidCarException;

public class CarAlreadyExistException extends BusinessException {
    public CarAlreadyExistException(int id) {
        super("Une voiture existe déjà dans la table avec l'id " + id);
    }
}
